<resources>
    <string name="app_name">Drippple</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_likes">Likes</string>
    <string name="drawer_menu_buckets">Buckets</string>
    <string name="shot_image">shot image</string>
    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
    <string name="title_home">Dribbble</string>
    <string name="title_likes">Likes</string>
    <string name="title_buckets">Buckets</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="activity_login_icon">log in</string>
    <string name="activity_signIn_btn_text"> Sign in</string>
    <string name="activity_signUp_btn_text"> Sign up</string>
    <string name="auth_activity_title">Log into Dribbble</string>
    <string name="user_name">User name</string>
    <string name="share_shot">Share Shot</string>
    <string name="choose_bucket">Choose Bucket</string>
    <string name="new_bucket_name">new bucket name</string>
    <string name="new_bucket_description">new bucket description</string>
    <string name="save">save</string>
    <string name="shot_count_single">%1$d shot</string>
    <string name="shot_count_plural">%1$d shots</string>
    <string name="nav_about_us">About App</string>
    <string name="privacy_policy">Private Policy</string>
    <string name="log_out">Log Out</string>
    <string name="new_image_name">New Image Name</string>
    <string name="new_image_file">File Name (Automatic save, if empty)</string>
    <string name="drawer_menu_RecentShot">Recent</string>
    <string name="title_recentShot">Recent</string>
    <string name="drawer_menu_Popular">Popular</string>
    <string name="drawer_menu_animated">Animated GIFs</string>
    <string name="title_animated">Animated GIFs</string>
    <string name="drawer_menu_motstView">Most View</string>
    <string name="drawer_menu_motstComment">Most Comment</string>
    <string name="drawer_menu_following">Following</string>
    <string name="title_mostView">Most View</string>
    <string name="title_mostComent">Most Comment</string>
    <string name="title_following">Following</string>
</resources>
